[package]
name = "singletonThread"
version = "1.1.0"
edition = "2021"
authors = ["Hyultis <hyultis@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/hyultis/singletonThread"
keywords = ["singleton","thread"]
categories = ["data-structures"]
description = "thread in a singleton"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
thread-priority = "1.1"
